# agent-memory

./: .gitignore  import_chat_history.py  memory.db.bak  pyproject.toml  start.sh  test_extract_diag.py
docs/: embedding-int8-benchmark.md  memory-pack-plan.md  volcano-callback-plan.md
memory_agent/: __init__.py  config.py  log.py  types.py
memory_agent/cli/: main.py
memory_agent/core/: __init__.py  chat.py  intent.py
memory_agent/memory/: __init__.py  extract.py  freshness.py  index.py  lifecycle.py  packer.py  search.py
memory_agent/providers/: __init__.py  base.py  embedding_local.py  llm_claude_cli.py  reranker_local.py
memory_agent/store/: __init__.py  base.py  sqlite.py
memory_agent/volcano/: __init__.py  assembler.py  decoder.py
memory_agent/web/: index.html  server.py
tests/: bench_onnx.py  test_optimizations.py  test_retrieval_accuracy.py
